# simpli-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/simpli_template/: __init__.py  app.py  cli.py  logging.py  settings.py
tests/: conftest.py  test_app.py  test_cli.py  test_ingest.py  test_logging.py
