[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpli-template"
version = "0.1.0"
description = "Simpli Support template project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
simpli-template = "simpli_template.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "typer.*",
    "structlog.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
