[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpli-template"
dynamic = ["version"]
description = "Simpli Support template project"
requires-python = ">=3.11"
dependencies = [
    "simpli-core @ git+https://github.com/simpli-support/simpli-core.git",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
simpli-template = "simpli_template.cli:app"

[tool.hatch.version]
path = "src/simpli_template/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "S", "PT", "RET", "ARG"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "typer.*",
    "structlog.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["simpli_template"]

[tool.coverage.report]
fail_under = 80
show_missing = true
